# zenoengine

./: .dockerignore  .env.example  .gitignore  CREATING_NEW_PROJECTS.md  DOCUMENTATION.md  Dockerfile  LICENSE  METAPROGRAMMING.md  MIGRATION_GUIDE.md  PANIC_RECOVERY.md  PRODUCTION_NGINX_LESS_GUIDE.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY_AUDIT_ZENO_VS_CADDY.md  UNIFIED_PLUGIN_SYSTEM.md  VIRTUAL_HOST_AUTO_HTTPS.md  WASM_PLUGIN_CLI.md  WASM_PLUGIN_CONFIG.md  WASM_PLUGIN_PROGRESS.md  WASM_PLUGIN_QUICKREF.md  WASM_PLUGIN_SPEC.md  ZENOLANG_AI_CONTEXT.md  ZENOLANG_DOCS_ID.md  ZENOVM.md  ZENO_STUDIO_VISION.md  ZENO_VS_LARAVEL_STRATEGY.md  cookies.txt  coverage.html  coverage.out  coverage_result.txt  disassembly.txt  final_test_output.txt  go.mod  go.sum  new-project.zl  test_bench.php  test_benchmark.zl  test_clean_syntax.zl  test_crud.sh  (+10 more)
.jules/: sentinel.md
DOCS/: DOCUMENTATION.md  GETTING_STARTED.md  PRODUCTION_NGINX_LESS_GUIDE.md  README.md  RELEASE_NOTES.md  SECURITY_AUDIT_ZENO_VS_CADDY.md  SIDECAR_VS_MICROSERVICE.md  UNIFIED_PLUGIN_SYSTEM.md  VIRTUAL_HOST_AUTO_HTTPS.md  WAF_GUIDE.md  WASM_PLUGIN_CLI.md  WASM_PLUGIN_CONFIG.md  ZENOLANG_AI_ROADMAP.md  ZENOLANG_DOCS_ID.md
ZenoRust/: Cargo.toml  MIGRATION.md  PROGRESS.md  README.md
ZenoRust/plugins/: mock_plugin.sh
ZenoRust/source/: advanced_slots_test.zl  bcrypt_test.zl  blade_test.zl  include_test.zl  index.zl  layout_test.zl  lib.zl  plugin_test.zl  stdlib_extended_test.zl  stdlib_test.zl  test.zl
ZenoRust/src/: builtins.rs  db_builder.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  middleware.rs  parser.rs  template.rs
ZenoRust/src/plugins/: sidecar.rs  wasm.rs
ZenoRust/views/layout_test/: child.blade.zl  layout.blade.zl
ZenoWasm/: .gitignore  Caddyfile  DOCS.md  README.md  build.sh  go.mod  go.sum  main.go
ZenoWasm/adapter/: auth.go  blade.go  fetch.go  js_interop.go  logic.go  math.go  router.go  storage.go  utils.go
ZenoWasm/embed/: datastar.go
ZenoWasm/public/: index.html
ZenoWasmRust/: Cargo.toml
ZenoWasmRust/src/: lib.rs
cmd/zeno/: zeno.go
database/migrations/: 2026_02_21_040203_create_users_table.zl
examples/: laravel_integration.zl  parking_system.zl  pdf_go_demo.zl  php_db_pool_benchmark.zl  php_plus_demo.zl  robotics_demo.zl
examples/metaprogramming/: demo.zl  myscript.zl  route.tpl
examples/zeno-x/: .env.example  LARAVEL_FEATURES.md  README.md  ai_dev.zl  artisan.zl  bootstrap.zl  test_framework.zl  test_orm_advanced.zl
experiment/zenojs/: README.md  index.html  index.js  package-lock.json  package.json  vite-plugin-zeno.js  vite.config.js
ext/zenodart/: README.md  pubspec.yaml
internal/app/: registry.go  router.go
internal/cli/: build.go  check.go  compile.go  docs.go  install.go  lsp.go  make_schema.go  migrate.go  plugin.go  plugin_build.go  plugin_new.go  plugin_test.go  route_list.go  run.go  test.go  version.go
internal/slots/: auth.go  auth_test.go  blade.go  blade_attributes_test.go  blade_native_advanced_loop_test.go  blade_native_auth_json_test.go  blade_native_can_test.go  blade_native_error_test.go  blade_native_extends_test.go  blade_native_features_test.go  blade_native_for_test.go  blade_native_include_test.go  blade_native_laravel_features_test.go  blade_native_ldx_test.go  blade_native_switch_test.go  blade_native_unclosed_test.go  blade_utils_test.go  blade_xss_test.go  job.go  (+44 more)
src/: main.zl
tests/: README.md  auth_integration_test.sh  example.test.zl  load_test_auth.sh  meta_ast_test.zl  meta_eval_test.zl  test_list.zl  test_permissions.zl
v0.1.0/: .gitignore  LANGUAGE_SPECIFICATION.md  LICENSE  README.md  ZENOLANG_AI_CONTEXT.md  ZENOLANG_STYLE_GUIDE.md  api_test_result.txt  cookies.txt  go.mod  go.sum  test_api.ps1
verification/: verify_zenojs.py  verify_zenojs_auth.py  verify_zenojs_cli.py  verify_zenojs_components.py  verify_zenojs_dist.py  verify_zenojs_docs.py  verify_zenojs_enhanced.py  verify_zenojs_full.py  verify_zenojs_jwt.py  verify_zenojs_prod.py  verify_zenojs_router.py  verify_zenojs_sfc.py  verify_zenojs_store.py  verify_zenojs_validation.py
zed-zenolang/: extension.toml
zeno-docs/: main.zl
(+371 files in other folders)
