[package]
name = "ZenoRust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-recursion = "1.1.1"
axum = { version = "0.8.8", optional = true }
chrono = "0.4.43"
dotenvy = "0.15.7"
futures = "0.3.31"
getrandom = { version = "0.2", features = ["js"] }
logos = "0.16.1"
reqwest = { version = "0.13.1", features = ["json", "blocking"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "mysql", "postgres", "any"], optional = true }
tokio = { version = "1.49.0", features = ["full"], optional = true }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"

[features]
default = ["server", "db", "http"]
server = ["dep:axum", "dep:tokio"]
db = ["dep:sqlx"]
http = ["dep:reqwest"]
