[package]
name = "ZenoRust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.101"
async-recursion = "1.1.1"
axum = { version = "0.8.8", optional = true }
base64 = "0.22.1"
bcrypt = "0.18.0"
chrono = "0.4.43"
dotenvy = "0.15.7"
futures = "0.3.31"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
image = "0.25.9"
logos = "0.16.1"
rand = { version = "0.9.2", features = ["std", "std_rng"] }
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["json", "blocking"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "mysql", "postgres", "any"], optional = true }
tokio = { version = "1.49.0", features = ["full", "process"], optional = true }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
wasmtime = "18.0.2"
wasmtime-wasi = "18.0.2"

[features]
default = ["server", "db", "http"]
server = ["dep:axum", "dep:tokio"]
db = ["dep:sqlx"]
http = ["dep:reqwest"]
